--- a/Decision code/requirements.txt
+++ b/Decision code/requirements.txt
@@ -1,6 +1,5 @@
-streamlit>=1.53
-pandas>=2.0
-numpy>=1.24
-plotly>=6.0
-openpyxl>=3.1
-
+streamlit==1.53.1
+pandas==2.3.3
+numpy==2.4.1
+plotly==6.0.0
+openpyxl==3.1.5
